<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/main_activity__textView_bookshelf"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/welcome_to_bookshelf"
        android:textColor="@color/primary_blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity__book_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_activity__book_picture" />

    <ImageView
        android:id="@+id/main_activity__book_picture"
        android:layout_width="@dimen/book_picture"
        android:layout_height="@dimen/book_picture"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/book_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/main_activity__editText_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity__book_picture" />

    <EditText
        android:id="@+id/main_activity__editText_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/main_activity__editText_name1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity__editText_name1"
        app:layout_constraintTop_toBottomOf="@+id/main_activity__editText_name1" />

    <EditText
        android:id="@+id/main_activity__editText_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/main_activity__editText_name2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity__editText_name2"
        app:layout_constraintTop_toBottomOf="@+id/main_activity__editText_name2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/sky_blue"
        android:onClick="buttonSaveClickHandler"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity__editText_name3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/sky_blue"
        android:onClick="onClickProfile"
        android:text="@string/go_to_profile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/main_activity_image_book2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/books_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>