<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCyan"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/layout_lower_corners">

        <TextView
            android:id="@+id/second_activity__textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:hint="@string/text_is_missing"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_activity__info" />

        <TextView
            android:id="@+id/second_activity__textLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:text="@string/last_name"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@+id/second_activity__textName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/second_activity__textName"
            app:layout_constraintTop_toBottomOf="@+id/second_activity__textName" />

        <TextView
            android:id="@+id/second_activity__textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:text="@string/email"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@+id/second_activity__textLastName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/second_activity__textLastName"
            app:layout_constraintTop_toBottomOf="@+id/second_activity__textLastName" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_is_missing"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/second_activity__textName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/second_activity__textName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_is_missing"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/second_activity__textLastName"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toTopOf="@+id/second_activity__textLastName" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_is_missing"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="@+id/second_activity__textEmail"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toTopOf="@+id/second_activity__textEmail" />

        <TextView
            android:id="@+id/second_activity__info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/your_profile"
            android:textSize="28sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/second_activity__saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/save"
            android:backgroundTint="@color/primary_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/second_activity__navbutton_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/second_activity__layout_home_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="240dp"
            android:layout_marginVertical="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/second_activity__button_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/home_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/home"
                android:textColor="@color/primary_blue">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_activity__layout_book_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="120dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="120dp"
            android:layout_marginVertical="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/second_activity__button_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:scaleType="centerInside"
                android:src="@drawable/book1_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/reading"
                android:textColor="@color/primary_blue">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_activity__layout_settings_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="240dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/second_activity__button_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/settings_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/settings"
                android:textColor="@color/primary_blue">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>