<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    tools:context=".NavigationBarFragment">

    <RelativeLayout
        android:id="@+id/main_activity__navbutton_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/main_activity__layout_home_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="240dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_activity_button_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/home_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/home"
                android:textColor="@color/primary_blue">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_activity__layout_book_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_activity_button_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:scaleType="centerInside"
                android:src="@drawable/book1_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/reading"
                android:textColor="@color/primary_blue">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_activity__layout_settings_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="240dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_activity_button_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/settings_icon"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </ImageView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:gravity="bottom|center"
                android:text="@string/settings"
                android:textColor="@color/primary_blue">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>